11 Java, изменила метод getgetFirst() в BurgerTest